# lib/db/src/schema/brokers.ts
@@ -11,6 +11,10 @@ export const brokersTable = pgTable("brokers", {
   tradingName: text("trading_name"),
   addressLine1: text("address_line1"),
   addressLine2: text("address_line2"),
+  building: text("building"),
+  noStreet: text("no_street"),
+  district: text("district"),
+  city: text("city"),
   town: text("town"),
   county: text("county"),
   postcode: text("postcode"),
@@ -30,6 +34,48 @@ export const brokersTable = pgTable("brokers", {
   keyAccount: text("key_account"),
   partnerCode: text("partner_code"),
   region: text("region"),
+  salutation: text("salutation"),
+  classCode: text("class_code"),
+  repkey: text("repkey"),
+  rsmNo: text("rsm_no"),
+  nextIfaIllRef: text("next_ifa_ill_ref"),
+  sibReference: text("sib_reference"),
+  sibAuthorisationDate: text("sib_authorisation_date"),
+  sibInitials: text("sib_initials"),
+  brokerPackSent: text("broker_pack_sent"),
+  brokerPackSentDate: text("broker_pack_sent_date"),
+  area: text("area"),
+  nextContactNo: text("next_contact_no"),
+  consultant: text("consultant"),
+  peverelBroker: text("peverel_broker"),
+  paidByBacs: text("paid_by_bacs"),
+  bankSortCode: text("bank_sort_code"),
+  bankAccountNo: text("bank_account_no"),
+  bankAccountName: text("bank_account_name"),
+  bankRef: text("bank_ref"),
+  networkIfaReference: text("network_ifa_reference"),
+  ifaCommission: text("ifa_commission"),
+  networkCommission: text("network_commission"),
+  network: text("network"),
+  memberNumber: text("member_number"),
+  plaIfaCommission: text("pla_ifa_commission"),
+  plaNetworkCommission: text("pla_network_commission"),
+  ifaWhen: text("ifa_when"),
+  ifaPortfolio: text("ifa_portfolio"),
+  brokerNameUpper: text("broker_name_upper"),
+  expense: text("expense"),
+  coCode: text("co_code"),
+  ltcCommission: text("ltc_commission"),
+  acareCommission: text("acare_commission"),
+  namId: text("nam_id"),
+  ilaCommission: text("ila_commission"),
+  ilaExpense: text("ila_expense"),
+  ifaIlaCommissionPct: text("ifa_ila_commission_pct"),
+  ifaIlaExpensePct: text("ifa_ila_expense_pct"),
+  networkIlaCommissionPct: text("network_ila_commission_pct"),
+  icfpCommission: text("icfp_commission"),
+  icfpExpense: text("icfp_expense"),
+  networkIcfpCommissionPct: text("network_icfp_commission_pct"),
   createdBy: text("created_by"),
   createdDate: text("created_date"),
   amendedBy: text("amended_by"),
